Fix spacing, vote by clicking buttons, not text

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
 
 Button {
-  margin-bottom: 2px;
+  margin-right: 2px;
 }
